hphp/hack/test/typecheck/new_inference/tparam_constraints.php.exp
File "tparam_constraints.php", line 4, characters 56-58:
This is an int (Typing[4110])
File "tparam_constraints.php", line 4, characters 46-49:
It is incompatible with a nullable type
